<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PaymentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:background="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/edit_profile" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/enter_full_name"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_white_10corn"
                android:hint="@string/enter_full_name"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/_12sdp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/mobile_number"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_white_10corn"
                android:hint="@string/mobile_number"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/_12sdp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email_id"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_enter_emailid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_white_10corn"
                android:hint="@string/email_id"
                android:paddingLeft="10dp"
                android:editable="false"
                android:paddingRight="10dp"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_enter_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/bg_white_10corn"
                android:hint="@string/address"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="@dimen/_5sdp"
                android:gravity="top|left"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="@dimen/_12sdp" />

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:id="@+id/cv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_80sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                card_view:cardCornerRadius="@dimen/_15sdp"
                card_view:cardElevation="@dimen/_3sdp">

                <LinearLayout
                    android:id="@+id/ll_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

</layout>