<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp"
        tools:context=".activities.LoginActivity">

        <LinearLayout
            android:id="@+id/ll_signin_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:textSize="@dimen/_22sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:background="@drawable/et_login_bg"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/username"
                    android:padding="@dimen/_4sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/et_email"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"

                    android:hint="@string/enter_email_id"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionNext"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/et_login_bg"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/pw"
                    android:padding="@dimen/_4sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/et_password"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/enter_password"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_forgot"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                card_view:cardCornerRadius="@dimen/_15sdp"
                android:background="@color/colorPrimaryDark"
                card_view:cardElevation="@dimen/_5sdp">

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:textSize="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_new_account"
                android:textSize="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="Create a new account"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_forgot_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/key"
                android:backgroundTint="@color/colorPrimaryDark" />

            <TextView
                android:textSize="@dimen/_22sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/forget_your_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/enter_your_email_address_below_and_we_ll_email_you_a_link_to_reset_your_password"
                android:textColor="@color/black"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/et_login_bg"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/email"
                    android:padding="@dimen/_4sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/et_email_forget"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@null"
                    android:hint="@string/enter_your_email"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                card_view:cardCornerRadius="@dimen/_15sdp"
                card_view:cardElevation="@dimen/_3sdp">

                <LinearLayout
                    android:id="@+id/ll_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center">

                    <TextView
                        android:textSize="@dimen/_15sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Send"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</layout>